Removed Lintian errors, updated README.md (#158).

--- a/CsoundAC/CMakeLists.txt
+++ b/CsoundAC/CMakeLists.txt
@@ -112,8 +112,7 @@ if(BUILD_CSOUND_AC)
 
     install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIRECTORY}"
         DESTINATION "include/csound"
-        FILES_MATCHING PATTERN "*.hpp"
-        PATTERN "__pycache__" EXCLUDE)
+        FILES_MATCHING PATTERN "*.hpp")
 
     install(TARGETS libCsoundAC
         LIBRARY DESTINATION "${LIBRARY_INSTALL_DIR}"
@@ -166,8 +165,7 @@ if(BUILD_CSOUND_AC)
             
         install(DIRECTORY "${CMAKE_CURRENT_SOURCE_DIRECTORY}"
             DESTINATION ${Python3_SITEARCH}
-            FILES_MATCHING PATTERN "*.py"
-            PATTERN "__pycache__" EXCLUDE)
+            FILES_MATCHING PATTERN "*.py")
     endif()
 
 endif()
