--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,6 @@ set(CMAKE_BUILD_TYPE "RelWithDebInfo")
 set(ALLOW_DUPLICATE_CUSTOM_TARGETS "Yes")
 add_definitions(-DUSE_DOUBLE)
 set(USE_DOUBLE "Yes")
-configure_file(${CMAKE_SOURCE_DIR}/dependencies/csound/include/float-version.h.in ${CMAKE_CURRENT_BINARY_DIR}/float-version.h)
 set(BUILD_DIR ${CMAKE_CURRENT_BINARY_DIR})
 set(BUILD_PLUGINS_DIR ${BUILD_DIR})
 set(BUILD_BIN_DIR ${BUILD_DIR})
@@ -76,7 +75,6 @@ option(BUILD_CHUA_OPCODES "Build the Chua opcodes" ON)
 option(BUILD_DSSI_OPCODES "Build the DSSI opcodes" ON)
 option(BUILD_EMUGENS_OPCODES "Build emugens opcodes" ON)
 option(BUILD_EXCITER_OPCODES "Build the exciter opcode" ON)
-option(BUILD_FAUST_OPCODES "Build the Faust opcodes" ON)
 option(BUILD_FLUID_OPCODES "Build the fluidsynth opcodes" ON)
 option(BUILD_FRAMEBUFFER_OPCODES "Build the framebuffer opcodes" ON)
 option(BUILD_IMAGE_OPCODES "Build the image opcodes" ON)
@@ -111,7 +109,6 @@ find_package(Eigen3 REQUIRED NO_MODULE)
 find_package(FLTK REQUIRED NO_MODULE)
 #message("FLTK_USE_FILE: ${FLTK_USE_FILE}")
 #include(${FLTK_USE_FILE})
-find_package(FAUST)
 find_package(FluidSynth)
 find_package(Gettext)
 find_package(GMM)
@@ -240,16 +237,14 @@ set(CPACK_RESOURCE_FILE_README "${CMAKE_SOURCE_DIR}/README.md")
 
 set(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
 set(CPACK_DEBIAN_COMPONENT_INSTALL "ON")
-set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/DEBIAN/triggers;${CMAKE_SOURCE_DIR}/DEBIAN/postinst;${CMAKE_SOURCE_DIR}/DEBIAN/postrm")
+# set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/DEBIAN/triggers" "${CMAKE_SOURCE_DIR}/DEBIAN/postrm" "${CMAKE_SOURCE_DIR}/DEBIAN/postinst")
+set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_SOURCE_DIR}/DEBIAN/triggers")
 set(CPACK_DEBIAN_PACKAGE_CONFLICTS "libcsoundac-dev, libcsoundac6.0v5")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "python3")
 set(CPACK_DEBIAN_PACKAGE_DESCRIPTION "Extends the sound programming language
  and library Csound. Additional features include the CsoundAC library for
  algorithmic composition, the cmask opcode for algorithmic composition
- and granular synthesis, the Common Music and nudruz libraries
- for algorithmic composition, csound.node to run Csound in the JavaScript
- context of NW.js, csound-wasm to run Csound in the JavaScript context of Web
- browsers, and others.")
+ and granular synthesis, and others.")
 set(CPACK_DEBIAN_PACKAGE_ENHANCES "csound, libsound64-dev, csound-python, csoundqt")
 set(CPACK_DEBIAN_PACKAGE_HOMEPAGE "https://github.com/gogins/csound-extended")
 set(CPACK_DEBIAN_PACKAGE_LICENSE "${CMAKE_SOURCE_DIR}/copyright.txt")
