Post-processing now uses metadata from settings.ini (#165).

--- a/playpen/playpen.ini
+++ b/playpen/playpen.ini
@@ -11,7 +11,7 @@
 
 author=Michael Gogins
 publisher=Irreducible Productions
-copyright=2021
+year=2021
 notes=electroacoustic music
 license=ASCAP
 
@@ -27,3 +27,5 @@ audio-output=dac:plughw:2,0
 
 soundfile-editor=audacity
 gnome-theme=Yaru-dark
+# lower-case!
+editor-scheme=cobalt
