Finished verbosity stuff (#168).

--- a/playpen/playpen.ini
+++ b/playpen/playpen.ini
@@ -3,7 +3,8 @@
 # the Free Desktop standard '$XDG_CONFIG_HOME/.config/playpen/playpen.ini', 
 # then the Free Desktop fallback '$HOME/.config/playpen/playpen.ini'.
 
-# Note: All keys must exist, but not all keys must have values.
+# Note: All keys must exist, but not all keys must have values. These 
+# startup settings are controlled only by editing this file.
 
 # Metadata for tagging output files.
 
@@ -29,3 +30,4 @@ soundfile-editor=audacity
 gnome-theme=Yaru-dark
 # lower-case!
 editor-scheme=cobalt
+verbose=False
