--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1,4 +1,5 @@
 # CSOUND-EXTENDED SCITE PROPERTIES FILE
+
 ## Michael (dot) Gogins (at) gmail (dot) com
 
 # This file customizes the SciTE lightweight code editor 
@@ -258,21 +259,560 @@ lexer.errorlist.value.separate=1
 
 ## CUSTOMIZATION OF VISUAL THEME
 
+# Give symbolic names to the set of fonts used in the standard styles.
+font.base=$(font.monospace)
+font.small=$(font.monospace),size:11
+font.comment=$(font.monospace),size:11,italic
+font.text=$(font.monospace)
+font.text.comment=$(font.monospace)
+font.embedded.base=$(font.monospace)
+font.embedded.comment=$(font.monospace)
+font.monospace=font:!Bitstream Vera Sans Mono,size:11
+font.vbs=$(font.monospace)
+
+# Solarized colour palette
+# http://ethanschoonover.com/solarized
+
+# Give symbolic names to the set of colours used in the standard styles.
+# base03    #002b36  8/4 brblack  234 #1c1c1c 15 -12 -12   0  43  54 193 100  21
+# base02    #073642  0/4 black    235 #262626 20 -12 -12   7  54  66 192  90  26
+# base01    #586e75 10/7 brgreen  240 #4e4e4e 45 -07 -07  88 110 117 194  25  46
+# base00    #657b83 11/7 bryellow 241 #585858 50 -07 -07 101 123 131 195  23  51
+# base0     #839496 12/6 brblue   244 #808080 60 -06 -03 131 148 150 186  13  59
+# base1     #93a1a1 14/4 brcyan   245 #8a8a8a 65 -05 -02 147 161 161 180   9  63
+# base2     #eee8d5  7/7 white    254 #d7d7af 92 -00  10 238 232 213  44  11  93
+# base3     #fdf6e3 15/7 brwhite  230 #ffffd7 97  00  10 253 246 227  44  10  99
+# yellow    #b58900  3/3 yellow   136 #af8700 60  10  65 181 137   0  45 100  71
+# orange    #cb4b16  9/3 brred    166 #d75f00 50  50  55 203  75  22  18  89  80
+# red       #dc322f  1/1 red      160 #d70000 50  65  45 220  50  47   1  79  86
+# magenta   #d33682  5/5 magenta  125 #af005f 50  65 -05 211  54 130 331  74  83
+# violet    #6c71c4 13/5 brmagenta 61 #5f5faf 50  15 -45 108 113 196 237  45  77
+# blue      #268bd2  4/4 blue      33 #0087ff 55 -10 -45  38 139 210 205  82  82
+# cyan      #2aa198  6/6 cyan      37 #00afaf 60 -35 -05  42 161 152 175  74  63
+# green     #859900
+colour.base03=#002b36
+colour.base02=#073642
+colour.base01=#586e75
+colour.base00=#657b83
+colour.base0=#839496
+colour.base1=#93a1a1
+colour.base2=#eee8d5
+colour.base3=#fdf6e3
+colour.yellow=#b58900
+colour.orange=#cb4b16
+colour.red=#dc322f
+colour.magenta=#d33682
+colour.violet=#6c71c4
+colour.blue=#268bd2
+colour.cyan=#2aa198
+colour.green=#859900
+
+colour.code.comment.box=fore:$(colour.base01),italics
+colour.code.comment.line=fore:$(colour.base01),italics
+colour.code.comment.doc=fore:$(colour.base01),italics
+colour.code.comment.nested=fore:$(colour.base01),italics
+colour.text.comment=fore:$(colour.base01),italics
+colour.other.comment=fore:$(colour.base01),italics
+colour.embedded.comment=fore:$(colour.base01),italics
+colour.embedded.js=fore:$(colour.base01)
+colour.notused=fore:$(colour.base01)
+
+# Defaults
+colour.number=fore:$(colour.base0)
+colour.keyword=fore:$(colour.blue)
+colour.string=fore:$(colour.cyan)
+colour.char=fore:$(colour.base0)
+colour.operator=fore:$(colour.blue)
+colour.preproc=fore:$(colour.base0)
+colour.error=fore:$(colour.red)
+
+# Fold margin
+fold.margin=0
+fold.margin.colour=$(colour.base03)
+fold.margin.highlight.colour=$(colour.base02)
+
+# The current line
+caret.line.back=#073642
+
+# Global default styles for all languages
+style.*.32=$(font.base),back:$(colour.base03),$(font.base),fore:$(colour.base0)
+# Line number
+style.*.33=fore:$(colour.base01),back:$(colour.base02),$(font.base)
+# Brace highlight
+style.*.34=fore:$(colour.red),bold
+# Brace incomplete highlight
+style.*.35=fore:$(colour.red),bold
+# Control characters
+style.*.36=
+# Indentation guides
+style.*.37=fore:#586e75
+
+# CSS
+style.css.32=
+# White space: Visible only in View Whitespace mode (or if it has a back colour)
+style.css.0=
+# Selector (HTML tag)
+style.css.1=$(colour.keyword)
+# Class selector ([HtmlTag].classSelector)
+style.css.2=
+# Pseudo class (HtmlTag:pseudoClass) see "keywords2" above
+style.css.3=
+# Unknown Pseudo class
+style.css.4=$(colour.error)
+# Operator
+style.css.5=$(colour.operator)
+# CSS1 Property, see keywords
+style.css.6=fore:$(colour.yellow)
+# Unknown Property
+style.css.7=$(colour.error)
+# Value
+style.css.8=$(colour.string)
+# Comment
+style.css.9=$(colour.text.comment),$(font.comment)
+# ID selector (#IdSel)
+style.css.10=$(colour.operator)
+# "!important"
+style.css.11=$(colour.error)
+# At-rule (@) except @media
+style.css.12=$(colour.error)
+# Double quoted strings
+style.css.13=$(colour.string)
+# Single quoted strings
+style.css.14=$(colour.string)
+# CSS2 Property, see keywords3
+style.css.15=fore:$(colour.yellow)
+# Attribute selection ([att='val'])
+style.css.16=
+# CSS3 Property, see keywords4
+style.css.17=fore:$(colour.yellow)
+# Pseudo elements, see keywords5
+style.css.18=$(colour.keyword)
+# Other CSS Property, see keywords6
+style.css.19=fore:$(colour.yellow)
+# Other Pseudoclass, see keywords7
+style.css.20=$(colour.keyword)
+# Other Pseudoelement, see keywords8
+style.css.21=$(colour.keyword)
+# "@media"
+style.css.22=$(colour.error)
+
+# HTML and XML share lexing code so use the same style numbers
+# Add ruby erb
+file.patterns.web=*.html;*.htm;*.asp;*.shtml;*.htd;*.jsp;*.rhtml;*.erb
+filter.web=Web (html htm rhtml erb asp shtml css xml docbook jsp)|$(file.patterns.web);*.css;*.xml;*.docbook|
+
+# Text
+style.hypertext.0=$(colour.char)
+# Tags
+style.hypertext.1=$(colour.keyword)
+# Unknown Tags
+style.hypertext.2=$(colour.char)
+# Attributes
+style.hypertext.3=fore:$(colour.base01)
+# Unknown Attributes
+style.hypertext.4=$(colour.error)
+# Numbers
+style.hypertext.5=$(colour.number)
+# Double quoted strings
+style.hypertext.6=$(colour.string)
+# Single quoted strings
+style.hypertext.7=$(colour.string)
+# Other inside tag
+style.hypertext.8=fore:$(colour.base01)
+# Comment
+style.hypertext.9=$(colour.text.comment),$(font.comment)
+# Entities
+style.hypertext.10=fore:$(colour.base01)
+# XML style tag ends '/>'
+style.hypertext.11=fore:$(colour.base01)
+# XML identifier start '<?'
+style.hypertext.12=fore:$(colour.base01)
+# XML identifier end '?>'
+style.hypertext.13=fore:$(colour.base01)
+# SCRIPT
+style.hypertext.14=fore:$(colour.base01)
+# ASP <% ... %>
+style.hypertext.15=fore:$(colour.orange)
+# ASP <% ... %>
+style.hypertext.16=fore:$(colour.orange)
+# CDATA
+style.hypertext.17=$(colour.char)
+# PHP
+style.hypertext.18=$(colour.char)
+# Unquoted values
+style.hypertext.19=$(colour.char)
+# JSP Comment <%-- ... --%>
+style.hypertext.20=$(colour.char)
+# SGML tags <! ... >
+style.hypertext.21=$(colour.char)
+# SGML command
+style.hypertext.22=$(colour.char)
+# SGML 1st param
+style.hypertext.23=$(colour.char)
+# SGML double string
+style.hypertext.24=$(colour.char)
+# SGML single string
+style.hypertext.25=$(colour.char)
+# SGML error
+style.hypertext.26=$(colour.error)
+# SGML special (#xxxx type)
+style.hypertext.27=$(colour.char)
+# SGML entity
+style.hypertext.28=$(colour.char)
+# SGML comment
+style.hypertext.29=$(colour.char)
+# SGML block
+style.hypertext.31=$(colour.char)
+# Some reasonable background colours found in the default Windows palette
+# Off White #FFFBF0    Light green #C0DCC0    Light Blue #A6CAF0
+# Matched Operators
+style.hypertext.34=$(colour.char)
+style.hypertext.35=$(colour.char)
+
+# Embedded Javascript
+fontcolour.js=
+# JS Start - allows eol filled background to not start on same line as SCRIPT tag
+style.hypertext.40=
+# JS Default
+style.hypertext.41=
+# JS Comment
+style.hypertext.42=
+# JS Line Comment
+style.hypertext.43=
+# JS Doc comment
+style.hypertext.44=
+# JS Number
+style.hypertext.45=
+# JS Word
+style.hypertext.46=
+# JS Keyword
+style.hypertext.47=
+# JS Double quoted string
+style.hypertext.48=$(colour.string)
+# JS Single quoted string
+style.hypertext.49=$(colour.string)
+# JS Symbols
+style.hypertext.50=
+# JavaScript EOL
+style.hypertext.51=
+# JavaScript RegEx
+style.hypertext.52=
+
+# ASP Javascript
+# JS Start - allows eol filled background to not start on same line as SCRIPT tag
+style.hypertext.55=
+# JS Default
+style.hypertext.56=
+# JS Comment
+style.hypertext.57=
+# JS Line Comment
+style.hypertext.58=
+# JS Doc comment
+style.hypertext.59=
+# JS Number
+style.hypertext.60=
+# JS Word
+style.hypertext.61=
+# JS Keyword
+style.hypertext.62=
+# JS Double quoted string
+style.hypertext.63=$(colour.string)
+# JS Single quoted string
+style.hypertext.64=$(colour.string)
+# JS Symbols
+style.hypertext.65=
+# JavaScript EOL
+style.hypertext.66=
+# JavaScript RegEx
+style.hypertext.67=
+
+# Embedded VBS
+# Start
+style.hypertext.70=
+# Default
+style.hypertext.71=
+# Comment
+style.hypertext.72=
+# Number
+style.hypertext.73=
+# KeyWord
+style.hypertext.74=
+# String
+style.hypertext.75=$(colour.string)
+# Identifier
+style.hypertext.76=
+# Unterminated string
+style.hypertext.77=$(colour.error)
+
+# ASP VBS
+# Start
+style.hypertext.80=
+# Default
+style.hypertext.81=
+# Comment
+style.hypertext.82=
+# Number
+style.hypertext.83=
+# KeyWord
+style.hypertext.84=
+# String
+style.hypertext.85=$(colour.string)
+# Identifier
+style.hypertext.86=
+# Unterminated string
+style.hypertext.87=$(colour.error)
+
+# Embedded Python
+style.hypertext.90=
+style.hypertext.91=
+# Comment
+style.hypertext.92=
+# Number
+style.hypertext.93=
+# String
+style.hypertext.94=$(colour.string)
+# Single quoted string
+style.hypertext.95=$(colour.string)
+# Keyword
+style.hypertext.96=$(colour.keyword)
+# Triple quotes
+style.hypertext.97=
+# Triple double quotes
+style.hypertext.98=
+# Class name definition
+style.hypertext.99=
+# Function or method name definition
+style.hypertext.100=
+# Operators
+style.hypertext.101=
+# Identifiers
+style.hypertext.102=
+
+# PHP complex variable
+style.hypertext.104=
+
+# ASP Python
+style.hypertext.105=
+style.hypertext.106=
+# Comment
+style.hypertext.107=
+# Number
+style.hypertext.108=$(colour.number)
+# String
+style.hypertext.109=$(colour.string)
+# Single quoted string
+style.hypertext.110=
+# Keyword
+style.hypertext.111=$(colour.keyword)
+# Triple quotes
+style.hypertext.112=$(colour.string)
+# Triple double quotes
+style.hypertext.113=$(colour.string)
+# Class name definition
+style.hypertext.114=
+# Function or method name definition
+style.hypertext.115=
+# Operators
+style.hypertext.116=
+# Identifiers
+style.hypertext.117=
+
+# PHP
+# Default
+style.hypertext.118=
+# Double quoted String
+style.hypertext.119=$(colour.string)
+# Single quoted string
+style.hypertext.120=$(colour.string)
+# Keyword
+style.hypertext.121=$(colour.keyword)
+# Number
+style.hypertext.122=$(colour.number)
+# Variable
+style.hypertext.123=
+# Comment
+style.hypertext.124=
+# One line comment
+style.hypertext.125=
+# PHP variable in double quoted string
+style.hypertext.126=
+# PHP operator
+style.hypertext.127=
+
+# XML: eXtensible Markup Language
+# For XML, there is no list of known tags or attributes so all are coloured known
+# Default
+style.xml.0=
+# Tags
+style.xml.1=
+# Unknown Tags
+style.xml.2=
+# Attributes
+style.xml.3=
+# Unknown Attributes
+style.xml.4=
+# Numbers
+style.xml.5=$(colour.number)
+# Double quoted strings
+style.xml.6=$(colour.string)
+# Single quoted strings
+style.xml.7=$(colour.string)
+# Other inside tag
+style.xml.8=
+# Comment
+style.xml.9=
+# Entities
+style.xml.10=
+# XML style tag ends '/>'
+style.xml.11=
+# XML identifier start '<?'
+style.xml.12=
+# XML identifier end '?>'
+style.xml.13=
+# CDATA
+style.xml.17=
+# Question
+style.xml.18=
+# Unquoted Value
+style.xml.19=
+# SGML tags <! ... >
+style.xml.21=
+# SGML command
+style.xml.22=
+# SGML 1st param
+style.xml.23=
+# SGML double string
+style.xml.24=
+# SGML single string
+style.xml.25=
+# SGML error
+style.xml.26=
+# SGML special (#xxxx type)
+style.xml.27=
+# SGML entity
+style.xml.28=
+# SGML comment
+style.xml.29=
+# SGML block
+style.xml.31=
+# No brace matching in XML
+braces.xml.style=31
+
+# Python styles
+# White space
+style.python.0=
+# Comment
+style.python.1=$(colour.text.comment)
+# Number
+style.python.2=$(colour.number)
+# String
+style.python.3=$(colour.string)
+# Single quoted string
+style.python.4=$(colour.string)
+# Keyword
+style.python.5=fore:$(colour.blue)
+# Triple quotes
+style.python.6=$(colour.string)
+# Triple double quotes
+style.python.7=$(colour.string)
+# Class name definition
+style.python.8=$(colour.keyword)
+# Function or method name definition
+style.python.9=$(colour.keyword)
+# Operators
+style.python.10=bold
+# Identifiers
+style.python.11=
+# Comment-blocks
+style.python.12=$(colour.text.comment)
+# End of line where string is not closed
+style.python.13=$(colour.error)
+# Highlighted identifiers
+style.python.14=
+# Decorators
+style.python.15=fore:$(colour.base00)
+# Matched Operators
+style.python.34=
+style.python.35=
+# Braces are only matched in operator style
+braces.python.style=10
+
+# Ruby
+# White space
+style.ruby.0=
+# Error
+style.ruby.1=$(colour.error)
+# Comment line
+style.ruby.2=$(colour.text.comment),$(font.comment),italics
+# POD
+style.ruby.3=
+# Number
+style.ruby.4=$(colour.number)
+# Word
+style.ruby.5=$(colour.char),bold
+# String
+style.ruby.6=$(colour.string)
+# Character
+style.ruby.7=$(colour.string)
+# Class name
+style.ruby.8=fore:$(colour.yellow)
+# Def name
+style.ruby.9=$(colour.keyword)
+# Operator
+style.ruby.10=
+# Identifier
+style.ruby.11=
+# Regex
+style.ruby.12=fore:$(colour.red)
+# Global
+style.ruby.13=$(colour.keyword)
+# Symbol
+style.ruby.14=$(colour.string)
+# MODULE_NAME
+style.ruby.15=fore:$(colour.orange),bold
+# INSTANCE_VAR
+style.ruby.16=$(colour.keyword)
+# CLASS_VAR
+style.ruby.17=$(colour.keyword)
+# BACKTICKS
+style.ruby.18=fore:$(colour.red)
+# DATASECTION
+style.ruby.19=
+# HERE_DELIM
+style.ruby.20=
+# HERE_Q
+style.ruby.21=
+# HERE_QQ
+style.ruby.22=
+# HERE_QX
+style.ruby.23=
+# STRING_Q
+style.ruby.24=
+# STRING_QQ
+style.ruby.25=
+# STRING_QX
+style.ruby.26=
+# STRING_QR
+style.ruby.27=
+# STRING_QW
+style.ruby.28=
+# Demoted Keyword
+style.ruby.29=$(style.ruby.5),normal
+# STDIN
+style.ruby.30=
+# STDOUT
+style.ruby.31=
+# STDERR
+style.ruby.40=
+
+# Matched Operators
+style.ruby.34=fore:$(colour.red),bold,back:$(colour.base01)
+style.ruby.35=fore:$(colour.red),bold,back:$(colour.base01)
+
 ## CUSTOMIZATION OF GO AND TOOL COMMANDS
 
-# This is a SciTE properties that contains all necessary commands for 
+# This is a SciTE properties file that contains all necessary commands for 
 # running compositions written for Csound.
-
-# Commands for running Common Lisp files in SBCL.
-# Csound is available to such programs by using the nudruz system.
-
-command.go.$(file.patterns.lisp)=sbcl --load $(FilePath)
-command.go.subsystem.$(file.patterns.lisp)=0
-
-# Commands for running HTML files with embedded Csound in NW.js.
-
-command.go.$(file.patterns.html)=~/run_nwjs_application.sh $(FileNameExt) $(FileName) $(FileDir)
-command.go.subsystem.$(file.patterns.html)=0
 
 # SciTE settings for Csound files (orchestra, score, and csd).
 
@@ -679,7 +1219,54 @@ zaw                 zawm                zdf_1pole           zdf_1pole_mode \
 zdf_2pole           zdf_2pole_mode      zdf_ladder          zfilter2 \ 
 zir                 ziw                 ziwm                zkcl \ 
 zkmod               zkr                 zkw                 zkwm \ 
-	midipolyaftertouch midichannelaftertouch
+midipolyaftertouch  midichannelaftertouch
+
+# White space
+style.csound.0=
+# Comment
+style.csound.1=$(colour.text.comment)
+# Number
+style.csound.2=$(colour.number)
+# String
+style.csound.3=$(colour.string)
+# Single quoted string
+style.csound.4=$(colour.string)
+# Keyword
+style.csound.5=fore:$(colour.blue)
+# Triple quotes
+style.csound.6=$v
+# Triple double quotes
+style.csound.7=$(colour.string)
+# Class name definition
+style.csound.8=$(colour.keyword)
+# Function or method name definition
+style.csound.9=$(colour.keyword)
+# Operators
+style.csound.10=bold
+# Identifiers
+style.csound.11=
+# Comment-blocks
+style.csound.12=$(colour.text.comment)
+# End of line where string is not closed
+style.csound.13=$(colour.error)
+# Highlighted identifiers
+style.csound.14=
+# Decorators
+style.csound.15=fore:$(colour.base00)
+# Matched Operators
+style.csound.34=
+style.csound.35=
+# Braces are only matched in operator style
+braces.csound.style=10
+
+# A-Rate variable
+style.csound.11=fore:$(colour.cyan),italics
+# K-Rate variable
+style.csound.12=fore:$(colour.green),italics
+# I-Rate variable
+style.csound.13=fore:$(colour.yellow),italics
+# Global variable
+style.csound.14=fore:$(colour.orange),italics
 
 # Header statements
 csound_header_stmts=sr kr ar ksmps nchnls
@@ -698,6 +1285,18 @@ command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
 command.subsystem.*.csd=2
+
+# Commands for running Common Lisp files in SBCL.
+# Csound is available to such programs by using the nudruz system.
+
+command.go.$(file.patterns.lisp)=sbcl --load $(FilePath)
+command.go.subsystem.$(file.patterns.lisp)=0
+
+# Commands for running HTML files with embedded Csound in NW.js.
+# You may need to modify this file for your environment, especially with 
+# respect to the path for NW.js, and the audio output options for NW.js.
+
+command.go.$(file.patterns.html)=$(SciteUserHome)/run_nwjs_application.sh $(FileNameExt) $(FileName) $(FileDir)
 
 # Custom commands for building and running a Csound piece written in C++.
 # Each piece must be one C++ file; this is not much of a limitation.
@@ -734,7 +1333,9 @@ command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -od
 command.name.8.*=Render csd piece to soundfile and play
 command.8.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 command.name.9.*=Render csd piece to soundfile and post-process and play 
-command.9.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python /home/mkg/csound-extended/post-process.py "/tmp/$(FileNameExt).wav"
+command.9.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" 
+-m163 
+-+msg_color=0 && python /home/mkg/csound-extended/post-process.py "/tmp/$(FileNameExt).wav"
 command.name.10.*=Render orc+sco piece to audio
 command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac:plughw:1,0 -m163 -+msg_color=0
 command.name.11.*=Render orc+sco piece to soundfile and play
@@ -743,12 +1344,25 @@ command.name.12.*=Test patch file to soundfile
 command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav"
 command.name.13.*=Test patch file to audio
 command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:1,0"
+
+# Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
+command.name.14.*=Open file in Cabbage
+command.14.*=Cabbage "$(FileNameExt)"
+
+
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interaction=nonstopmode $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
-command.go.*.py=python3.9 -u "$(FileNameExt)"
+command.go.*.py=python3.7 -u "$(FileNameExt)"
 
-style.errorlist.32=$(font.small),back:#0F0F0F
-style.errorlist.0=fore:#00DD00
+# The errorlist is the output pane contents.
+
+style.errorlist.1=$(font.small),back:#121212
+style.errorlist.2=$(font.small),back:#121212
+style.errorlist.3=$(font.small),back:#121212
+style.errorlist.9=$(font.small),back:#121212
+style.errorlist.0=$(font.small),fore:#00AA00,back:#121212
+style.errorlist.32=$(font.small),fore:#00AA00,back:#121212
+
