Getting PySide6 to do the job (#172).

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1280,7 +1280,7 @@ keywords3.$(file.patterns.csound)=$(csound_other_keywords)
 
 comment.block.csound=;
 
-command.go.*.inc=python /home/mkg/csound-extended/silencio/patches/patch_calibrator.py $(FileName) 
+command.go.*.inc=3.8 /home/mkg/csound-extended/silencio/patches/patch_calibrator.py $(FileName) 
 command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
@@ -1346,13 +1346,18 @@ command.name.13.*=Test patch file to audio
 command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:1,0"
 
 # Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
+
 command.name.14.*=Open file in Cabbage
 command.14.*=Cabbage "$(FileNameExt)"
 
+# Custom command for designing a graphical user interface and generating a Python UI file.
+
+command.name.15.*=Open Qt designer for this piece
+command.15.*=pyside6-designer "$(FileName).ui" && pyside6-uic "$(FileName).ui" > "$(FileName)"_ui.py
 
 # Always run pdflatex to compile LaTeX.
 
-command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interaction=nonstopmode $(FileNameExt)
+command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
 command.go.*.py=python3.7 -u "$(FileNameExt)"
