Signals and slots pattern works (#172).

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1350,10 +1350,10 @@ command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(F
 command.name.14.*=Open file in Cabbage
 command.14.*=Cabbage "$(FileNameExt)"
 
-# Custom command for designing a graphical user interface and generating a Python UI file.
+# Custom command for designing a graphical user interface with Qt Designer.
 
 command.name.15.*=Open Qt designer for this piece
-command.15.*=pyside6-designer "$(FileName).ui" && pyside6-uic "$(FileName).ui" > "$(FileName)"_ui.py
+command.15.*=pyside6-designer "$(FileName).ui"
 
 # Always run pdflatex to compile LaTeX.
 
