--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -245,7 +245,7 @@ scriptol smalltalk sorcins spice specman \
 tacl tal txt2tags verilog vhdl
 import *
 
-font.monospace=font:!Courier New,size:12
+font.monospace=font:Courier,size:12
 font.base=$(font.monospace)
 font.small=$(font.monospace)
 font.comment=$(font.monospace)
@@ -1347,12 +1347,12 @@ command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(F
 
 # Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
 
-command.name.14.*=Open file in Cabbage
+command.name.14.*=Open csd piece in Cabbage
 command.14.*=Cabbage "$(FileNameExt)"
 
 # Custom command for designing a graphical user interface with Qt Designer.
 
-command.name.15.*=Open Qt designer for this piece
+command.name.15.*=Open Python piece in Qt Designer
 command.15.*=pyside6-designer "$(FileName).ui"
 
 # Always run pdflatex to compile LaTeX.
@@ -1360,7 +1360,7 @@ command.15.*=pyside6-designer "$(FileName).ui"
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
-command.go.*.py=python3.7 -u "$(FileNameExt)"
+command.go.*.py=python3.8 -u "$(FileNameExt)"
 
 # The errorlist is the output pane contents.
 
