--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1355,6 +1355,21 @@ command.14.*=Cabbage "$(FileNameExt)"
 command.name.15.*=Open Python piece in Qt Designer
 command.15.*=pyside6-designer "$(FileName).ui"
 
+# Custom command for Csound reference.
+command.name.16.*=View Csound Reference Manual
+command.subsystem.16=2
+command.16.*=xdg-open https://gogins.github.io/csound-extended-manual/indexframes.html &
+
+# Custom command for CsoundAC reference.
+command.name.17.*=View csound-extended documentation
+command.subsystem.17=2
+command.17.*=xdg-open file:///home/mkg/csound-extended/doc/html/index.html &
+
+# Custom command for Python documentation.
+command.name.18.*=View Python documentation
+command.subsystem.18=2
+command.18.*=xdg-open https://docs.python.org/3/ &
+
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
