Changed to ctcsound (#172).

--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1379,10 +1379,7 @@ command.go.*.py=python3.8 -u "$(FileNameExt)"
 
 # The errorlist is the output pane contents.
 
-style.errorlist.1=$(font.small),back:#121212
-style.errorlist.2=$(font.small),back:#121212
-style.errorlist.3=$(font.small),back:#121212
-style.errorlist.9=$(font.small),back:#121212
-style.errorlist.0=$(font.small),fore:#00AA00,back:#121212
-style.errorlist.32=$(font.small),fore:#00AA00,back:#121212
-
+style.errorlist.20=$(font.small),fore:#00DD00,back:#222222
+style.errorlist.0=$(font.small),fore:#00DD00,back:#222222
+style.errorlist.21=$(font.small),fore:#00DD00,back:#222222
+style.errorlist.32=$(font.small),fore:#00DD00,back:#222222
