--- a/.SciTEUser.properties
+++ b/.SciTEUser.properties
@@ -1370,6 +1370,10 @@ command.name.18.*=View Python documentation
 command.subsystem.18=2
 command.18.*=xdg-open https://docs.python.org/3/ &
 
+# Custom command for designing a user interface with Glade for Gtk.
+command.name.19.*=Open Python piece in Glade 
+command.19.*=glade "$(FileName).ui" &
+
 # Always run pdflatex to compile LaTeX.
 
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
