--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1280,7 +1280,7 @@ keywords3.$(file.patterns.csound)=$(csound_other_keywords)
 
 comment.block.csound=;
 
-command.go.*.inc=3.8 /home/mkg/csound-extended/silencio/patches/patch_calibrator.py $(FileName) 
+command.go.*.inc=3.8 ${SciteUserHome)/patch_calibrator.py $(FileName) 
 command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
@@ -1304,14 +1304,18 @@ command.go.$(file.patterns.html)=$(SciteUserHome)/run_nwjs_application.sh $(File
 
 command.name.0.*=Build C++ piece for debug
 command.0.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/local/include -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -g3 -gdwarf-3 -DDEBUG "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lGamma -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm
+
 command.name.1.*=Render C++ piece to audio
 command.1.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --audio PortAudio --device dac
+
 command.name.2.*=Render C++ piece to soundfile
 command.2.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound 
-command.namecd "$(FileDir)" && .3.*=Render C++ piece to soundfile and post-process
+
+command.name.3=*=Render C++ piece to soundfile and post-process
 command.3.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post
+
 command.name.4.*=Render C++ piece to soundfile and post-process and play 
-command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav sweep
+command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/include/opencv4 -I/usr/include/python3.9 -I/usr/include -I/usr/include/eigen3 -O2 -g "$(FilePath)" -o$(FileName) -I/usr/local/include/csound -I/usr/include/csound -lCsoundAC -lcsnd6 -lcsound64 -lsndfile -lpython3.9 -lgc -lpthread -ldl -lm && ./$(FileName) --csound --post --playwav audacity
 
 # Custom commands for building a C++ plugin opcode for Csound.
 # Each plugin must be one C++ file; this is not much of a limitation.
@@ -1319,6 +1323,7 @@ command.4.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I. -I/usr/i
 
 command.name.5.*=Build Csound C++ plugin opcode (release)
 command.5.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include -O3 -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
+
 command.name.6.*=Build Csound C++ plugin opcode (debug)
 command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/local/include     -g "$(FilePath)" -fPIC -shared -olib$(FileName).so -I/usr/local/include/csound -I/usr/include/csound -I/usr/include/luajit-2.1 -lGamma -lCsoundAC -lluajit-5.1 -lsndfile -lgc -lpthread -ldl -lm
 
@@ -1330,20 +1335,24 @@ command.6.*=g++ -Dlinux --std=gnu++17 -lstdc++fs -Wno-write-strings -I.  -I/usr/
 
 command.name.7.*=Render csd piece to audio
 command.7.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -odac:plughw:1,0 -m163 -+msg_color=0
+
 command.name.8.*=Render csd piece to soundfile and play
 command.8.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
+
 command.name.9.*=Render csd piece to soundfile and post-process and play 
-command.9.*=cd "$(FileDir)" && csound "$(FileNameExt)" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" 
--m163 
--+msg_color=0 && python /home/mkg/csound-extended/post-process.py "/tmp/$(FileNameExt).wav"
+command.9.*=cd $(FileDir) && csound $(FileNameExt) --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && python $(SciteUserHome)/post-process.py "/tmp/$(FileNameExt).wav"
+
 command.name.10.*=Render orc+sco piece to audio
 command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -odac:plughw:1,0 -m163 -+msg_color=0
+
 command.name.11.*=Render orc+sco piece to soundfile and play
 command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
+
 command.name.12.*=Test patch file to soundfile 
-command.12.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav"
+command.12.*=cd "$(FileDir)" && python $(SciteUserHome)/patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav"
+
 command.name.13.*=Test patch file to audio
-command.13.*=cd "$(FileDir)" && python patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:1,0"
+command.13.*=cd "$(FileDir)" && python $(SciteUserHome)/patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:1,0"
 
 # Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
 
@@ -1362,7 +1371,7 @@ command.16.*=xdg-open https://gogins.github.io/csound-extended-manual/indexframe
 # Custom command for CsoundAC reference.
 command.name.17.*=View csound-extended documentation
 command.subsystem.17=2
-command.17.*=xdg-open file:///home/mkg/csound-extended/doc/html/index.html &
+command.17.*=xdg-open file://$(SciteUserHome)/csound-extended/doc/html/index.html &
 
 # Custom command for Python documentation.
 command.name.18.*=View Python documentation
