--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -347,6 +347,21 @@ style.*.36=
 # Indentation guides
 style.*.37=fore:#586e75
 
+# Some changest to the default markdown style.
+
+# SCE_MARKDOWN_LINK: "[]", "![]" - Link or image
+style.markdown.18=fore:#0088AA,underlined
+# SCE_MARKDOWN_PRECHAR: Prechar (up to three indent spaces, e.g. for a second-level list)
+style.markdown.12=char
+# SCE_MARKDOWN_CODE2: "``" - Inline code (quotes code containing a single backtick)
+style.markdown.20=back:#999999,fore:#343434,$(font.monospace)
+# SCE_MARKDOWN_CODE: '`' - Inline code
+style.markdown.19=back:#999999,fore:#343434,$(font.monospace)
+# SCE_MARKDOWN_CODEBK: "~~~" - Code block
+style.markdown.21=back:#999999,fore:#343434,$(font.monospace)
+
+
+
 # CSS
 style.css.32=
 # White space: Visible only in View Whitespace mode (or if it has a back colour)
