--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1295,7 +1295,7 @@ keywords3.$(file.patterns.csound)=$(csound_other_keywords)
 
 comment.block.csound=;
 
-command.go.*.inc=3.8 ${SciteUserHome)/patch_calibrator.py $(FileName) 
+command.go.*.inc=python3.8 ${SciteUserHome)/patch_calibrator.py $(FileName) 
 command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
@@ -1398,7 +1398,7 @@ command.18.*=xdg-open https://docs.python.org/3/ &
 command.build.$(file.patterns.tex)=pdflatex -synctex=1 --shell-escape -interact ion=nonstopmode $(FileNameExt)
 command.go.$(file.patterns.tex)=xdg-open $(FileName).pdf
 
-command.go.*.py=python3.8 -u "$(FileNameExt)"
+command.go.*.py=python3.7 -u "$(FileNameExt)"
 
 # The errorlist is the output pane contents.
 
