--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1295,7 +1295,7 @@ keywords3.$(file.patterns.csound)=$(csound_other_keywords)
 
 comment.block.csound=;
 
-command.go.*.inc=python3.8 ${SciteUserHome)/patch_calibrator.py $(FileName) 
+command.go.*.inc=python3.8 ${SciteUserHome)/patch_calibrator.py $(FileName) && audacity /tmp/$(FileName).wav
 command.go.subsystem.*.inc=0
 
 command.go.*.csd=csound "$(FilePath)" -+msg_color=0
@@ -1363,11 +1363,11 @@ command.10.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --sim
 command.name.11.*=Render orc+sco piece to soundfile and play
 command.11.*=cd "$(FileDir)" && csound "$(FileName).orc" "$(FileName).sco" --simple-sorted-score -o"/tmp/$(FileNameExt).wav" -m163 -+msg_color=0 && audacity "/tmp/$(FileNameExt).wav"
 
-command.name.12.*=Test patch file to soundfile 
-command.12.*=cd "$(FileDir)" && python $(SciteUserHome)/patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav"
+command.name.12.*=Test patch file to audio
+command.12.*=cd "$(FileDir)" && python $(SciteUserHome)/patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:2,0"
 
-command.name.13.*=Test patch file to audio
-command.13.*=cd "$(FileDir)" && python $(SciteUserHome)/patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:1,0"
+command.name.13.*=Test patch file to soundfile 
+command.13.*=cd "$(FileDir)" && python $(SciteUserHome)/patch_calibrator.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav" && audacity "/tmp/$(FileNameExt).wav"
 
 # Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
 
