--- a/playpen/.SciTEUser.properties
+++ b/playpen/.SciTEUser.properties
@@ -1369,29 +1369,33 @@ command.12.*=cd "$(FileDir)" && python $(SciteUserHome)/instrument_test.py "$(Fi
 command.name.13.*=Test instrument patch to soundfile 
 command.13.*=cd "$(FileDir)" && python $(SciteUserHome)/instrument_test.py "$(FileNameExt)" "$(FileName)" "-o/tmp/$(FileNameExt).wav" 
 
+command.name.14.*=Test effect patch to audio
+command.14.*=cd "$(FileDir)" && python $(SciteUserHome)/effect_test.py "$(FileNameExt)" "$(FileName)" "-odac:plughw:2,0"
+
+
 # Custom command for opening a CSD file in Cabbage to add or use a graphical user interface.
 
-command.name.14.*=Open csd piece in Cabbage
-command.14.*=Cabbage "$(FileNameExt)"
+command.name.15.*=Open csd piece in Cabbage
+command.15.*=Cabbage "$(FileNameExt)"
 
 # Custom command for designing a user interface with Glade for Gtk.
-command.name.15.*=Open Python piece in Glade 
-command.15.*=glade "$(FileName).ui" &
+command.name.16.*=Open Python piece in Glade 
+command.16.*=glade "$(FileName).ui" &
 
 # Custom command for Csound reference.
-command.name.16.*=View Csound Reference Manual
-command.subsystem.16=2
-command.16.*=xdg-open https://gogins.github.io/csound-extended-manual/indexframes.html &
+command.name.17.*=View Csound Reference Manual
+command.subsystem.17=2
+command.17.*=xdg-open https://gogins.github.io/csound-extended-manual/indexframes.html &
 
 # Custom command for CsoundAC reference.
-command.name.17.*=View csound-extended documentation
-command.subsystem.17=2
-command.17.*=xdg-open file://$(SciteUserHome)/csound-extended/doc/html/index.html &
+command.name.18.*=View csound-extended documentation
+command.subsystem.18=2
+command.18.*=xdg-open file://$(SciteUserHome)/csound-extended/doc/html/index.html &
 
 # Custom command for Python documentation.
-command.name.18.*=View Python documentation
-command.subsystem.18=2
-command.18.*=xdg-open https://docs.python.org/3/ &
+command.name.19.*=View Python documentation
+command.subsystem.19=2
+command.19.*=xdg-open https://docs.python.org/3/ &
 
 # Always run pdflatex to compile LaTeX.
 
